--- a/figures.ipynb
+++ b/figures.ipynb
@@ -18,6 +18,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "46b89995-54c7-4216-93a0-3f879022d3dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at FacebookAI/roberta-large-mnli were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========Base==========\n",
+      "==========================================================================================\n",
+      "Layer (type:depth-idx)                                            Param #\n",
+      "==========================================================================================\n",
+      "RobertaForSequenceClassification                                  --\n",
+      "├─RobertaModel: 1-1                                               --\n",
+      "│    └─RobertaEmbeddings: 2-1                                     --\n",
+      "│    │    └─Embedding: 3-1                                        51,471,360\n",
+      "│    │    └─Embedding: 3-2                                        526,336\n",
+      "│    │    └─Embedding: 3-3                                        1,024\n",
+      "│    │    └─LayerNorm: 3-4                                        2,048\n",
+      "│    │    └─Dropout: 3-5                                          --\n",
+      "│    └─RobertaEncoder: 2-2                                        --\n",
+      "│    │    └─ModuleList: 3-6                                       302,309,376\n",
+      "├─RobertaClassificationHead: 1-2                                  --\n",
+      "│    └─Linear: 2-3                                                1,049,600\n",
+      "│    └─Dropout: 2-4                                               --\n",
+      "│    └─Linear: 2-5                                                3,075\n",
+      "==========================================================================================\n",
+      "Total params: 355,362,819\n",
+      "Trainable params: 355,362,819\n",
+      "Non-trainable params: 0\n",
+      "==========================================================================================\n",
+      "==========LoRA==========\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at FacebookAI/roberta-large-mnli were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================================\n",
+      "Layer (type:depth-idx)                                            Param #\n",
+      "==========================================================================================\n",
+      "RobertaForSequenceClassification                                  --\n",
+      "├─RobertaModel: 1-1                                               --\n",
+      "│    └─RobertaEmbeddings: 2-1                                     --\n",
+      "│    │    └─Embedding: 3-1                                        (51,471,360)\n",
+      "│    │    └─Embedding: 3-2                                        (526,336)\n",
+      "│    │    └─Embedding: 3-3                                        (1,024)\n",
+      "│    │    └─LayerNorm: 3-4                                        (2,048)\n",
+      "│    │    └─Dropout: 3-5                                          --\n",
+      "│    └─RobertaEncoder: 2-2                                        --\n",
+      "│    │    └─ModuleList: 3-6                                       305,455,104\n",
+      "├─RobertaClassificationHead: 1-2                                  --\n",
+      "│    └─Linear: 2-3                                                (1,049,600)\n",
+      "│    └─Dropout: 2-4                                               --\n",
+      "│    └─Linear: 2-5                                                (3,075)\n",
+      "==========================================================================================\n",
+      "Total params: 358,508,547\n",
+      "Trainable params: 3,145,728\n",
+      "Non-trainable params: 355,362,819\n",
+      "==========================================================================================\n",
+      "==========TLoRA==========\n",
+      "==========================================================================================\n",
+      "Layer (type:depth-idx)                                            Param #\n",
+      "==========================================================================================\n",
+      "RobertaForSequenceClassification                                  --\n",
+      "├─RobertaModel: 1-1                                               --\n",
+      "│    └─RobertaEmbeddings: 2-1                                     --\n",
+      "│    │    └─Embedding: 3-1                                        (51,471,360)\n",
+      "│    │    └─Embedding: 3-2                                        (526,336)\n",
+      "│    │    └─Embedding: 3-3                                        (1,024)\n",
+      "│    │    └─LayerNorm: 3-4                                        (2,048)\n",
+      "│    │    └─Dropout: 3-5                                          --\n",
+      "│    └─RobertaEncoder: 2-2                                        --\n",
+      "│    │    └─ModuleList: 3-6                                       305,504,304\n",
+      "├─RobertaClassificationHead: 1-2                                  --\n",
+      "│    └─Linear: 2-3                                                (1,049,600)\n",
+      "│    └─Dropout: 2-4                                               --\n",
+      "│    └─Linear: 2-5                                                (3,075)\n",
+      "==========================================================================================\n",
+      "Total params: 358,557,747\n",
+      "Trainable params: 49,200\n",
+      "Non-trainable params: 358,508,547\n",
+      "==========================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoConfig, AutoModelForSequenceClassification\n",
+    "from tlora import create_lora_model\n",
+    "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "from torchinfo import summary\n",
+    "\n",
+    "model_name = \"FacebookAI/roberta-large-mnli\"\n",
+    "config = AutoConfig.from_pretrained(model_name)\n",
+    "rank = 32\n",
+    "\n",
+    "# Create LoRA model/adapter\n",
+    "print (\"==========Base==========\")\n",
+    "base_model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "    model_name,\n",
+    "    config=config,\n",
+    ").to(device)\n",
+    "print(summary(base_model))\n",
+    "\n",
+    "print (\"==========LoRA==========\")\n",
+    "lora_type = \"lora\"\n",
+    "lora_model = create_lora_model(base_model, rank=rank, lora_type=lora_type)\n",
+    "print(summary(lora_model))\n",
+    "\n",
+    "# Create LoRA model/adapter\n",
+    "print (\"==========TLoRA==========\")\n",
+    "base_model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "    model_name,\n",
+    "    config=config,\n",
+    ").to(device)\n",
+    "lora_type = \"tlora\"\n",
+    "lora_model = create_lora_model(base_model, rank=rank, lora_type=lora_type)\n",
+    "print(summary(lora_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "acc8ad40-c888-4537-bf01-18474c4feb22",
    "metadata": {},
